objects/pse__Utilization_Engine_TOD__c.object
<CustomObject>
    <fields>
        <fullName>pse__Period__c</fullName>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Utilization Engines TOD</relationshipLabel>
        <relationshipName>Utilization_Engines_TOD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__data_assigned_00_00__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned 00:00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__data_assigned_00_15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned 00:15</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__data_assigned_00_30__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned 00:30</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__data_calendar_00_00__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calendar 00:00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__data_calendar_00_15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calendar 00:15</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__data_calendar_00_30__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calendar 00:30</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__data_held_00_00__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Held 00:00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__data_held_00_15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Held 00:15</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__data_held_00_30__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Held 00:30</label>
        <type>Checkbox</type>
    </fields>
    <label>Utilization Engine TOD</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UETOD-{000000}</displayFormat>
        <label>Utilization Engine TOD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Engines TOD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>